--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,35 @@
-# Dog Meal Planner Configuration
+# Fresh Pup Configuration
 
+# =============================================================================
 # Database URL
+# =============================================================================
 # Local development (SQLite):
 DATABASE_URL=sqlite:///./dog_meal_planner.db
 
-# For Vercel deployment, use a cloud PostgreSQL database:
-# - Vercel Postgres: postgres://user:password@host:5432/database
-# - Neon: postgresql://user:password@host/database?sslmode=require
-# - Supabase: postgresql://postgres:password@host:5432/postgres
+# For Supabase Postgres (production):
+# Get from: Supabase Dashboard > Settings > Database > Connection string
+# Format: postgresql://postgres:[PASSWORD]@db.[PROJECT-REF].supabase.co:5432/postgres
+# DATABASE_URL=postgresql://postgres:YOUR_PASSWORD@db.YOUR_PROJECT.supabase.co:5432/postgres
 
-# USDA FoodData Central API Key (optional for search)
+# =============================================================================
+# Supabase Configuration (Required for auth/production)
+# =============================================================================
+# Get these from: Supabase Dashboard > Settings > API
+
+# Your Supabase project URL
+SUPABASE_URL=https://YOUR_PROJECT.supabase.co
+
+# Anon/public key (safe to expose in frontend)
+SUPABASE_ANON_KEY=
+
+# Service role key (KEEP SECRET - backend only)
+SUPABASE_SERVICE_KEY=
+
+# JWT secret for token verification (Settings > API > JWT Settings > JWT Secret)
+SUPABASE_JWT_SECRET=
+
+# =============================================================================
+# USDA API (Optional - for ingredient search)
+# =============================================================================
 # Get your free key at: https://fdc.nal.usda.gov/api-key-signup.html
 USDA_API_KEY=
