--- a/requirements.txt
+++ b/requirements.txt
@@ -6,5 +6,6 @@ pydantic-settings==2.1.0
 httpx==0.26.0
 python-dotenv==1.0.0
 psycopg2-binary==2.9.9
+python-jose[cryptography]==3.3.0
 pytest==7.4.4
 pytest-asyncio==0.23.3
